@@ -3,6 +3,11 @@
   * add `util.serialize()` and `util.deserialize()`
   * allow whitespace (ignore space and `\n\r\t\v`) in input strings,
     e.g. `bitarray('01 11')` or `a += '10 00'`
+  * When initializing a bitarray from another with different bit endianness,
+    e.g. `a = bitarray('110', 'little')` and `b = bitarray(a, 'big')`,
+    the buffer used to be simply copied, with consequence that `a == b` would
+    result in `False`.  This is fixed now, that is `a == b` will always
+    evaluate to `True`.
   * add example showing how to jsonize bitarrays
 
 
